[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netcupctl"
version = "0.1.0"
description = "CLI client for netcup Server Control Panel REST API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "netcupctl contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
netcupctl = "netcupctl.cli:main"

[project.urls]
Homepage = "https://github.com/DS09AT/netcupctl"
Documentation = "https://github.com/DS09AT/netcupctl/blob/main/README.md"
Repository = "https://github.com/DS09AT/netcupctl"
Issues = "https://github.com/DS09AT/netcupctl/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
netcupctl = ["py.typed"]
